--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </header>
             <p>I am a Unity developer with experience in creating first-person and third-person games. My focus is on blending storytelling, culture, and gameplay to create experiences that resonate with players. Currently doing my Masters in Game Technology from ICAT Bangalore.</p>
             <ul class="actions">
-                <li><a href="#" class="button">Download Resume</a></li>
+                <li><a href="images/Baasil-Parkar-Resume.pdf" class="button">Download Resume</a></li>
             </ul>
         </section>
 
@@ -431,7 +431,7 @@
     <footer id="footer">
         <div class="inner">
             <ul class="icons">
-                <!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+                <!--<li><a href="https://www.instagram.com/bashpark/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
                 <li><a href="https://github.com/BashPark" class="icon brands fa-github"><span class="label">Github</span></a></li>
                 <!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
                 <li><a href="mailto:parkarbaasil@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
