--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section id="three">
             <h2>Get In Touch</h2>
             <p>Feel free to contact me for any more details.</p>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-8 col-12-small">
                     <form method="post" action="#">
                         <div class="row gtr-uniform gtr-50">
@@ -85,14 +85,13 @@
                     <ul class="actions">
                         <li><input type="submit" value="Send Message" /></li>
                     </ul>
-                </div>
+                </div>-->
                 <div class="col-4 col-12-small">
                     <ul class="labeled-icons">
                         <li>
                             <h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-                            Jogeshwari,<br />
-                            Mumbai, 400102<br />
-                            India
+                            Jogeshwari, Mumbai, 400102, India <br />
+                            Bommanahalli, Bangalore, 560068, India
                         </li>
                         <li>
                             <h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
