Added 2 new projects
Origami Odyssey + Pop Duel

--- a/5OrigamiOdyssey.html
+++ b/5OrigamiOdyssey.html
@@ -16,7 +16,7 @@
 
 
 
-    <title>Natural Selection Baasil</title>
+    <title>Origami Odyssey Baasil</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -114,14 +114,14 @@
 
                     <header role="work-title">
 
-                        <h2>Natural Selection</h2>
+                        <h2>Origami Odyssey</h2>
                         
-                        <a href="https://bashpark.itch.io/natural-selection" target="_blank">Itch.io<i
-                                class="fa fa-external-link-square" aria-hidden="true"></i></a>
+                        <!-- <a href="https://bashpark.itch.io/natural-selection" target="_blank">Itch.io<i
+                                class="fa fa-external-link-square" aria-hidden="true"></i></a> -->
 
                         <br>
 
-                        <a href="https://youtu.be/B6DabLfaeyw" target="_blank">Watch Video <i
+                        <a href="https://youtu.be/TiHNLbGmXFM" target="_blank">Watch Video <i
                                 class="fa fa-external-link-square" aria-hidden="true"></i></a>
 
                     </header>
@@ -132,9 +132,9 @@
 
                     <section>
 
-                        <p>Developed a 3D hyper-casual game themed around evolution. The game spans three levels, starting with a monkey, then evolving into a caveman, and finally into a farmer. Players manage hunger, perform tasks, and deliver resources to a magical shrine that activates a portal to the next level. I contributed to designing the progression system, implementing mechanics for resource management, and creating the spawning mechanics for each evolutionary stage. This project deepened my understanding of balancing gameplay mechanics in a short development cycle. I also worked on shader graphs and Visual effects.</p>
+                        <p>Developed a 3D speedrunning game set in a vibrant origami-style world made of paper and cardboard. Players can transform into a frog, dinosaur, horse, or dragonfly, using their unique abilities to navigate the environment. The goal is to explore, collect toys, and beat the timer, creating a fast-paced and dynamic experience. This project strengthened my skills in character transformation mechanics, level design, and optimizing movement systems for smooth gameplay.</p>
 
-                        <p>This was for my second game jam, where I won first place. I also worked with a team of 4, so this helped in learning to work well with others.</p>
+                        <p>This was for my college major project. I worked with a partner, who was a 2D / 3D Artist.</p>
 
 
 
@@ -158,11 +158,11 @@
 
                 <ul class="grid-lod effect-2" id="grid">
 
-                    <li><img src="images/work/NaturalSelection1.jpg" alt="" class="img-responsive" /></li>
+                    <li><img src="images/work/OD2.png" alt="" class="img-responsive" /></li>
 
-                    <li><img src="images/work/NaturalSelection2.jpg" alt="" class="img-responsive" /></li>
+                    <li><img src="images/work/OD3.png" alt="" class="img-responsive" /></li>
 
-                    <li><img src="images/work/NaturalSelection3.jpg" alt="" class="img-responsive" /></li>
+                    <li><img src="images/work/OD4.png" alt="" class="img-responsive" /></li>
 
                 </ul>
 
