--- a/6PopDuel.html
+++ b/6PopDuel.html
@@ -16,7 +16,7 @@
 
 
 
-    <title>Natural Selection Baasil</title>
+    <title>Pop Duel Baasil</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -114,14 +114,14 @@
 
                     <header role="work-title">
 
-                        <h2>Natural Selection</h2>
+                        <h2>Pop Duel</h2>
                         
-                        <a href="https://bashpark.itch.io/natural-selection" target="_blank">Itch.io<i
-                                class="fa fa-external-link-square" aria-hidden="true"></i></a>
+                        <!-- <a href="https://bashpark.itch.io/natural-selection" target="_blank">Itch.io<i
+                                class="fa fa-external-link-square" aria-hidden="true"></i></a> -->
 
                         <br>
 
-                        <a href="https://youtu.be/B6DabLfaeyw" target="_blank">Watch Video <i
+                        <a href="https://youtu.be/5i7opp76CCA" target="_blank">Watch Video <i
                                 class="fa fa-external-link-square" aria-hidden="true"></i></a>
 
                     </header>
@@ -132,15 +132,15 @@
 
                     <section>
 
-                        <p>Developed a 3D hyper-casual game themed around evolution. The game spans three levels, starting with a monkey, then evolving into a caveman, and finally into a farmer. Players manage hunger, perform tasks, and deliver resources to a magical shrine that activates a portal to the next level. I contributed to designing the progression system, implementing mechanics for resource management, and creating the spawning mechanics for each evolutionary stage. This project deepened my understanding of balancing gameplay mechanics in a short development cycle. I also worked on shader graphs and Visual effects.</p>
+                        <p>For Global Game Jam Bangalore, I led a team of six to develop a local couch co-op multiplayer game based on the theme "Bubbles." Players control chibi-style characters and battle using different types of bubble gum—normal, freeze, shock, and bazooka gum—each with unique mechanics. As the team lead, I managed development, coordinated tasks, and ensured smooth gameplay implementation.</p>
 
-                        <p>This was for my second game jam, where I won first place. I also worked with a team of 4, so this helped in learning to work well with others.</p>
+                        <p>This project was a great learning experience in teamwork, rapid prototyping, and refining multiplayer mechanics.</p>
 
 
 
                         <p><strong>Role</strong><br />
 
-                            Developer, Technical Artist, Game Designer</p>
+                            Developer, Team Lead</p>
 
                     </section>
 
@@ -158,11 +158,11 @@
 
                 <ul class="grid-lod effect-2" id="grid">
 
-                    <li><img src="images/work/NaturalSelection1.jpg" alt="" class="img-responsive" /></li>
+                    <li><img src="images/work/PD2.png" alt="" class="img-responsive" /></li>
 
-                    <li><img src="images/work/NaturalSelection2.jpg" alt="" class="img-responsive" /></li>
+                    <li><img src="images/work/PD3.png" alt="" class="img-responsive" /></li>
 
-                    <li><img src="images/work/NaturalSelection3.jpg" alt="" class="img-responsive" /></li>
+                    <li><img src="images/work/PD4.png" alt="" class="img-responsive" /></li>
 
                 </ul>
 
