--- a/index.html
+++ b/index.html
@@ -158,6 +158,30 @@
 
                         <figure class="effect-oscar2">
 
+                            <img src="images/home-images/image-6.jpg" alt="" class="img-responsive" />
+
+                            <figcaption>
+
+
+
+                                <!-- <h2>Natural Selection</h2>
+
+                                <p>Hypercasual 3D android game for Nostra GameJam</p> -->
+
+                                <a href="5OrigamiOdyssey.html"></a>
+
+
+
+                            </figcaption>
+
+                        </figure>
+
+                    </li>
+
+                    <li>
+
+                        <figure class="effect-oscar2">
+
                             <img src="images/home-images/image-2.jpg" alt="" class="img-responsive" />
 
                             <figcaption>
@@ -177,8 +201,6 @@
                         </figure>
 
                     </li>
-
-
 
                     <li>
 
@@ -211,6 +233,30 @@
             <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid">
 
                 <ul class="grid-lod effect-2" id="grid">
+
+                    <li>
+
+                        <figure class="effect-oscar2">
+
+                            <img src="images/home-images/image-7.jpg" alt="" class="img-responsive" />
+
+                            <figcaption>
+
+
+
+                                <!-- <h2>Natural Selection</h2>
+
+                                <p>Hypercasual 3D android game for Nostra GameJam</p> -->
+
+                                <a href="6PopDuel.html"></a>
+
+
+
+                            </figcaption>
+
+                        </figure>
+
+                    </li>
 
                     <li>
 
